<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center_vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
            style="@style/Estilotexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50px"
            android:textSize="@dimen/titulo"/>

    <Button
            style="@style/Estilotexto.Botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_places"
            android:id="@+id/buttonShowPlaces"
            android:textSize="@dimen/boton"/>

    <Button
            style="@style/Estilotexto.Botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferences"
            android:id="@+id/buttonPreferences"
            android:textSize="@dimen/boton"/>

    <Button
            style="@style/Estilotexto.Botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:id="@+id/buttonAbout"
            android:textSize="@dimen/boton"/>

    <Button
            style="@style/Estilotexto.Botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:id="@+id/buttonExit"
            android:textSize="@dimen/boton"/>
</LinearLayout>

